--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-NEO4J_SCHEME=neo4j
+NEO4J_SCHEME=neo4j+s
 NEO4J_PORT=7687
-NEO4J_HOST=localhost
+NEO4J_HOST=7c902749.databases.neo4j.io
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=neo
+NEO4J_PASSWORD=neo4j123
 
 HASH_ROUNDS=10
 
